# Shoppingapp

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/config/: settings.py
backend/app/dependencies/: auth.py
backend/app/routes/: __init__.py  barcode.py  health.py  households.py  inventory.py  shopping_list.py
backend/app/schemas/: __init__.py  auth.py  barcode.py  households.py  inventory.py  shopping_list.py
backend/app/services/: __init__.py  barcode_service.py  household_service.py  inventory_service.py  shopping_list_service.py  supabase_client.py
backend/migrations/: 20260406_0001_initial_household_food_schema.sql
backend/tests/: test_barcode.py  test_households.py  test_inventory.py  test_shopping_list.py
docs/: architecture.md
ios-app/FoodManagerApp/: FoodManagerApp.swift
ios-app/FoodManagerApp/Models/: DomainModels.swift
ios-app/FoodManagerApp/Services/: APIClient.swift  AppConfig.swift  AuthSessionService.swift  InventoryService.swift  ShoppingListService.swift  SupabaseAuthClient.swift
ios-app/FoodManagerApp/ViewModels/: AppState.swift  HouseholdViewModel.swift  InventoryViewModel.swift  ShoppingListViewModel.swift
ios-app/FoodManagerApp/Views/: AuthContainerView.swift  BarcodeScannerView.swift  HouseholdCreationView.swift  HouseholdDashboardView.swift  InventoryView.swift  LoginView.swift  RecipesView.swift  RootView.swift  ShoppingListView.swift  SignUpView.swift
